# Collie-agent

./: .env.example  .gitignore  README.md  config.example.toml  main.py  pyproject.toml
agent/: __init__.py  commands.py  frame.py  intent.py  llm.py  loop.py  models.py  phase_modules.py  phases.py  prompt.py  slots.py  trace.py
bootstrap/: __init__.py  app.py  background.py  config.py  discord.py  memory.py  plugins.py  providers.py  tools.py
bus/: __init__.py  event_bus.py  message_bus.py  models.py
channels/: __init__.py  base.py  discord_channel.py
configs/: README.md  base.toml  discord.example.toml  llm.compatible.example.toml  llm.echo.toml  llm.openai.example.toml  local.example.toml  production.example.toml
docs/: Drift原理分析.md  Proactive原理分析.md  agent-trace-and-intent.md  agent_phases.md  architecture.md  development.md  drift.md  memory.md  plugins.md  proactive.md  教学文档.md  记忆系统原理分析.md  说明文档.md  项目完整说明书.md
drift/: __init__.py  models.py  registry.py  runtime.py  tasks.py
memory/: __init__.py  admin.py  consolidator.py  default_engine.py  embedder.py  engine.py  extractor.py  markdown_store.py  memory2_store.py  merge_resolver.py  models.py  optimizer.py  retriever.py  runtime.py  scheduler.py  search.py  server.py  store.py  vector_store.py
plugins/: __init__.py  base.py  context.py  manager.py
plugins_builtin/: __init__.py
proactive/: __init__.py  judge.py  models.py  runtime.py  sources.py
session/: __init__.py  manager.py  models.py
tests/: conftest.py  test_agent_loop_smoke.py  test_agent_loop_trace.py  test_agent_phases.py  (+26 more)
(+12 files in other folders)
