[project]
name = "Collie-agent"
version = "0.1.0"
description = "一个简化版个人 AI Agent 运行时。"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.4.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "pydantic>=2.8.0",
    "rich>=13.7.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
vector = [
    "json-repair>=0.39.0",
    "sqlite-vec>=0.1.6",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
